--- a/JavaScriptCourse/complete-javascript-course-master/17-Modern-JS-Modules-Tooling/starter/package.json
+++ b/JavaScriptCourse/complete-javascript-course-master/17-Modern-JS-Modules-Tooling/starter/package.json
@@ -2,7 +2,6 @@
   "name": "starter",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
   "scripts": {
     "start": "parcel index.html",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "core-js": "^3.36.0",
     "leaflet": "^1.9.4",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "parcel": "^2.12.0"
