--- a/Angular - The Complete Guide (2024 Edition)/Section2 Angular Essentials - Components, Templates, Services & More/project/.editorconfig
+++ b/Angular - The Complete Guide (2024 Edition)/Section2 Angular Essentials - Components, Templates, Services & More/project/.editorconfig
@@ -7,10 +7,13 @@ indent_style = space
 indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
+quote_type = single
 
 [*.ts]
 quote_type = single
 
+
 [*.md]
-max_line_length = off
+max_line_length = false
 trim_trailing_whitespace = false
+
