--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
-        "devkit"
+        "devkit",
+        "Lotarry"
     ],
     "solidity.compileUsingRemoteVersion": "v0.4.17+commit.bdeb9e52"
 }
